# k8s-demo

./: .gitignore  .pylintrc  LICENSE  README.md  build_deps.sh  compose.old.yml  compose.yml  config.yaml  db_expose.sh  destroy.sh  init.sh  kind.yaml  load_scripts.sh  test  upgrade.sh
.github/workflows/: docs.yml
copy_this_to_local_bin/: prepend_path
docs/: architecture.md  conf.py  db.md  index.md  modules.md  pyproject.toml  quickstart.md  requirements.txt  traefik.md
docs/_static/: custom.css
docs/helm/: helm.md  simple-service.md  traefik.md
frontend-common/: pyproject.toml
frontend-common/frontend_common/: dash_layout.py  module_meta.py
frontend-main/: Dockerfile
frontend-main/frontend_main/: main.py
helm/: frontend-main.yaml  postgres.md  test-api.yaml  test-frontend.yaml  values-api.yaml  values-frontend.yaml
helm/charts/empty/: Chart.yaml
helm/charts/empty/templates/: NOTES.txt
helm/charts/postgres-additional/: Chart.yaml  values.yaml
helm/charts/postgres-additional/templates/: NOTES.txt  pv.yaml  scrt.yaml
helm/charts/simple-service/: values.yaml
helm/charts/simple-service/templates/: 01-deployment.yaml  02-service.yaml  03-traefik.yaml  NOTES.txt
helm/postgres/: values.yaml
helm/simple-service/: Chart.yaml  values.yaml
helm/simple-service/templates/: 01-deployment.yaml  03-traefik.yaml  service.yaml
helm/values/: frontend-main.yaml  traefik.yaml
helm/values/postgres0/: main.yaml  pvc.yaml  secret.example.yaml
helm/values/test/: api.yaml  frontend.yaml
myapp/: Dockerfile  pyproject.toml
myapp-api/: .env  Dockerfile  README.md  pyproject.toml
myapp-api/myapp_api/: db.py  main.py  test_module.py
myapp-frontend/: .env  Dockerfile  README.md  pyproject.toml
myapp-frontend/myapp_frontend/: main.py  module_meta.py
myapp-frontend/myapp_frontend/assets/: dashAgGridComponentFunctions.js
myapp-frontend/myapp_frontend/pages/: home.py  test.py
myapp-k8s/: myapp-api.yaml
myapp-models/: README.md  pyproject.toml
myapp-models/myapp_models/: test_model.py
myapp/myapp/: __init__.py  db.py  main.py  ping.py
myapp/myapp/frontend/: main.py  module_meta.py
myapp/myapp/frontend/pages/: home.py  test.py
myapp/myapp/test_module/: __init__.py  api.py
postgres/: README.md  postgres-pv.yaml
scripts/: bashdoc  local_registry_init.sh  local_registry_list.sh  local_registry_rm.sh  publish.sh  server_build.sh  server_dev.sh  server_docker.sh  server_publish.sh
src/: compose.yml
src/frontend-common/: pyproject.toml
src/frontend-common/frontend_common/: dash_layout.py  module_meta.py
src/frontend-main/: pyproject.toml
src/test-module/: pyproject.toml
src/test-module/test_module/: api.py  db.py  frontend.py
src/test-module/test_module/assets/: dashAgGridComponentFunctions.js
test-module/: .env  .env.secret.example  api.Dockerfile  frontend.Dockerfile  pyproject.toml
test-module/test_module/: api.py  db.py  frontend.py
