[tool.poetry]
name="k8s-demo-docs"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
Sphinx = "^8.0.2"
myst-parser = "^4.0.0"
sphinxcontrib-kroki = "^1.3.0"
sphinx-rtd-theme = "^3.0.0rc1"
sphinx-rtd-dark-mode = "^1.3.0"
setuptools = "^74.1.2"
sphinx-copybutton = "^0.5.2"

[tool.poetry.group.server.dependencies]
sphinx-serve = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"