[tool.poetry]
name = "frontend-common"
version = "0.1.0"
description = "Common definitions for the frontends in our K8s demo app."
license = "MIT"
repository = "https://github.com/yinchi/k8s-demo"
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.2.4"
dash-compose = "^2023.3.12"
pydantic = "^2.8.2"
sqlmodel = "^0.0.21"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
color_output = true

[tool.autopep8]
max_line_length = 100