[tool.poetry]
name = "test-module"
version = "0.1.0"
description = "Test module for our K8s demo app, including a REST API and a frontend page."
license = "MIT"
repository = "https://github.com/yinchi/k8s-demo"
authors = ["Yin-Chi Chan <ycc39@cam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
sqlmodel = "^0.0.21"
SQLAlchemy = "^2.0.32"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pylint = "^3.2.6"


[tool.poetry.group.frontend.dependencies]
requests = "^2.32.3"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.2.4"
dash-compose = "^2023.3.12"
dash-ag-grid = "^31.2.0"
gunicorn = "^23.0.0"
frontend-common = {path = "../frontend-common", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 100
color_output = true
known_first_party = ["frontend-common"]

[tool.autopep8]
max_line_length = 100
